--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,40 @@
 * {
     color: rgb(87, 57, 32);
-    background-color: rgb(161, 255, 224);
-    margin: 0px;
-    padding: 0px;
+    /* background-color: rgb(161, 255, 224); */
+    
+    margin: 0;
+    padding: 0;
 }
 
 
 nav *{
     /* margin-left: 25px; */
+    margin: auto;
     padding: 50px 50px 0px 50px;
+    color: white;
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
+    /* position: fixed;
+    top: 0; */
 }
 
-img {
+nav li:hover {
+    background-color: rgb(161, 255, 224);
+  }
+
+/* nav li {
+    display: inline;
+    list-style: none;
+    
+} */
+
+/* img {
  
     display: inline-block;
     margin: 25px 0px 25px 0px;
     padding: 25px 0px 0px 25px;
+    border-radius: 10% / 50%;
     width: 25%;
-<<<<<<< HEAD
     max-height: 25%;
   
 } */
@@ -128,27 +143,8 @@ body {
     margin-left: 10%;   
     margin-right: 10%;
     padding: 50px 50px 50px 50px;
-=======
-    height: 25%;
-}
-
-body {
-    /* background-color: #0C85F5; */
-	/* border: 4px solid rgba(0,0,0,.5);
-	margin-top: 28px;
-	margin-bottom: 28px;
-    margin: auto;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	gap: 100px; */
-    padding: 50px 50px 50px 50px;
-    text-align: center;
->>>>>>> 8b01b4e4f1550ab31eca0be2ebae7a0171011295
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 26px;
-
 }
 
 header {
@@ -182,10 +178,10 @@ p {
     /* letter-spacing: 2px; */
     line-height: 2;
     text-indent: 50px;
+    padding: 0px 0px 25px 0px;
 }
 
 footer {
-<<<<<<< HEAD
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -205,9 +201,3 @@ footer {
     width: 20%;
 }
 
-=======
-    margin: 25px;
-    padding: 10px
-    line-height: 2;
-}
->>>>>>> 8b01b4e4f1550ab31eca0be2ebae7a0171011295
